Add crosbell chain, display link to character page on navigation for crosbell chain

--- a/app/.env
+++ b/app/.env
@@ -4,3 +4,6 @@ NEXT_PUBLIC_LIGHTHOUSE_API_KEY=
 
 NEXT_PUBLIC_BSC_TESTNET_PROFILE_CONTRACT_ADDRESS=0xaAFFe298AbE153b4B72a55BDa224F83dB6748339
 NEXT_PUBLIC_BSC_TESTNET_CHALLENGE_CONTRACT_ADDRESS=0x48c33f2B2960877cBDe2cD55e97A302C8c0F5504
+
+NEXT_PUBLIC_CROSSBELL_PROFILE_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+NEXT_PUBLIC_CROSSBELL_CHALLENGE_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
