--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stream-challenges-app",
+  "name": "stream-challenges-cool-app",
   "version": "0.1",
   "private": true,
   "scripts": {
